# python-seed

./: .gitignore  Dockerfile  README  config.ini  pyproject.toml
src/: db.py  load_modules.py  main.py  middlewares.py
src/items/: routes.py
src/models/: users.py
src/users/: __init__.py  controllers.py  routes.py
