[tool.poetry]
name = "python-seed"
version = "0.1.0"
description = "seed project"
authors = ["yulong.song <yulong.song@ormuco.com>"]
packages = [
    { include = "src/**/*.py" },
]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.11.5"
starlette = "^0.13.4"
graphene = "^2.1.8"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
pylint = "^2.5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
dev = "uvicorn main:app --reload"