[tool.poetry]
name = "python-seed"
version = "0.1.0"
description = "seed project"
authors = ["yulong.song <yulong.song@ormuco.com>"]

[tool.poetry.dependencies]
python = "^3.7"
graphene = "^2.1.8"
uvicorn = "^0.11.5"
fastapi = "^0.55.1"
gino = "^1.0.0"

[tool.poetry.dev-dependencies]
pep8 = "^1.7.1"
pylint = "^2.5.2"
yapf = "^0.30.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
